Fixed spacing of title

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h2 span {
     }
 
     h2 span {
-        top:300px;
+        top:350px;
         font-size: 2rem;
     }
 }
